code/DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'if'", "'else'", 
                     "'for'", "'return'", "'break'", "'continue'", "'boolean'", 
                     "'char'", "'int'", "'string'", "'True'", "'False'", 
                     "'void'", "'callout'", "';'", "'{'", "'}'", "'['", 
                     "']'", "'('", "')'", "','", "'\"'", "'''", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'>'", 
                     "'<'", "'>='", "'<='", "'='", "'+='", "'-='", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "CLASS", "PROGRAM", "IF", "ELSE", "FOR", 
                      "RETURN", "BREAK", "CONTINUE", "BOOLEAN", "CHAR", 
                      "INT", "STRING", "TRUE", "FALSE", "VOID", "CALLOUT", 
                      "SEMICOLON", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", 
                      "LROUND", "RROUND", "COMMA", "QUOTES", "APOSTROPHE", 
                      "ADD", "SUB", "MULTIPLY", "DIVIDE", "REMINDER", "AND", 
                      "OR", "NOT", "GREATER_OP", "LESS_OP", "GREATER_eq_op", 
                      "LESS_eq_op", "EQUAL_OP", "ADD_eq_op", "SUB_eq_op", 
                      "EQUALITY_OP", "UNEQUALITY_OP", "ID", "ALPHA", "CHAR_LITERAL", 
                      "DECIMAL_LITERAL", "DIGIT", "HEX_LITERAL", "BOOL_LITERAL", 
                      "STRING_LITERAL", "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", 
                      "COMMENT", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_vardeclr = 1
    RULE_field_declr = 2
    RULE_array_id = 3
    RULE_field_var = 4
    RULE_var_id = 5
    RULE_method_declr = 6
    RULE_return_type = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_method_call_inter = 10
    RULE_method_call = 11
    RULE_expr = 12
    RULE_location = 13
    RULE_callout_arg = 14
    RULE_int_literal = 15
    RULE_rel_op = 16
    RULE_eq_op = 17
    RULE_cond_op = 18
    RULE_literal = 19
    RULE_bin_op = 20
    RULE_arith_op = 21
    RULE_var_type = 22
    RULE_assign_op = 23
    RULE_method_name = 24

    ruleNames =  [ "program", "vardeclr", "field_declr", "array_id", "field_var", 
                   "var_id", "method_declr", "return_type", "block", "statement", 
                   "method_call_inter", "method_call", "expr", "location", 
                   "callout_arg", "int_literal", "rel_op", "eq_op", "cond_op", 
                   "literal", "bin_op", "arith_op", "var_type", "assign_op", 
                   "method_name" ]

    EOF = Token.EOF
    CLASS=1
    PROGRAM=2
    IF=3
    ELSE=4
    FOR=5
    RETURN=6
    BREAK=7
    CONTINUE=8
    BOOLEAN=9
    CHAR=10
    INT=11
    STRING=12
    TRUE=13
    FALSE=14
    VOID=15
    CALLOUT=16
    SEMICOLON=17
    LCURLY=18
    RCURLY=19
    LSQUARE=20
    RSQUARE=21
    LROUND=22
    RROUND=23
    COMMA=24
    QUOTES=25
    APOSTROPHE=26
    ADD=27
    SUB=28
    MULTIPLY=29
    DIVIDE=30
    REMINDER=31
    AND=32
    OR=33
    NOT=34
    GREATER_OP=35
    LESS_OP=36
    GREATER_eq_op=37
    LESS_eq_op=38
    EQUAL_OP=39
    ADD_eq_op=40
    SUB_eq_op=41
    EQUALITY_OP=42
    UNEQUALITY_OP=43
    ID=44
    ALPHA=45
    CHAR_LITERAL=46
    DECIMAL_LITERAL=47
    DIGIT=48
    HEX_LITERAL=49
    BOOL_LITERAL=50
    STRING_LITERAL=51
    ALPHA_NUM=52
    HEX_DIGIT=53
    LINE_COMMENT=54
    COMMENT=55
    NEWLINE=56
    WHITESPACE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(DecafParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def field_declr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_declrContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_declrContext,i)


        def method_declr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declrContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declrContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(DecafParser.CLASS)
            self.state = 51
            self.match(DecafParser.PROGRAM)
            self.state = 52
            self.match(DecafParser.LCURLY)
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.field_declr() 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.VOID))) != 0):
                self.state = 59
                self.method_declr()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_typeContext,i)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_varContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_vardeclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclr" ):
                listener.enterVardeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclr" ):
                listener.exitVardeclr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclr" ):
                return visitor.visitVardeclr(self)
            else:
                return visitor.visitChildren(self)




    def vardeclr(self):

        localctx = DecafParser.VardeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardeclr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.var_type()
            self.state = 68
            self.field_var()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 70
                self.match(DecafParser.COMMA)
                self.state = 71
                self.var_type()
                self.state = 72
                self.field_var()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_varContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_field_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declr" ):
                listener.enterField_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declr" ):
                listener.exitField_declr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_declr" ):
                return visitor.visitField_declr(self)
            else:
                return visitor.visitChildren(self)




    def field_declr(self):

        localctx = DecafParser.Field_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.var_type()
            self.state = 82
            self.field_var()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 83
                self.match(DecafParser.COMMA)
                self.state = 84
                self.field_var()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(DecafParser.Int_literalContext,0)


        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_array_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id" ):
                listener.enterArray_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id" ):
                listener.exitArray_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_id" ):
                return visitor.visitArray_id(self)
            else:
                return visitor.visitChildren(self)




    def array_id(self):

        localctx = DecafParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(DecafParser.ID)
            self.state = 93
            self.match(DecafParser.LSQUARE)
            self.state = 94
            self.int_literal()
            self.state = 95
            self.match(DecafParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(DecafParser.Var_idContext,0)


        def array_id(self):
            return self.getTypedRuleContext(DecafParser.Array_idContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_field_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_var" ):
                listener.enterField_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_var" ):
                listener.exitField_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_var" ):
                return visitor.visitField_var(self)
            else:
                return visitor.visitChildren(self)




    def field_var(self):

        localctx = DecafParser.Field_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_field_var)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.array_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_id" ):
                return visitor.visitVar_id(self)
            else:
                return visitor.visitChildren(self)




    def var_id(self):

        localctx = DecafParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(DecafParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(DecafParser.Return_typeContext,0)


        def method_name(self):
            return self.getTypedRuleContext(DecafParser.Method_nameContext,0)


        def LROUND(self):
            return self.getToken(DecafParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(DecafParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_typeContext,i)


        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_idContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_idContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_method_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declr" ):
                listener.enterMethod_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declr" ):
                listener.exitMethod_declr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declr" ):
                return visitor.visitMethod_declr(self)
            else:
                return visitor.visitChildren(self)




    def method_declr(self):

        localctx = DecafParser.Method_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.return_type()
            self.state = 104
            self.method_name()
            self.state = 105
            self.match(DecafParser.LROUND)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DecafParser.BOOLEAN or _la==DecafParser.INT:
                self.state = 106
                self.var_type()
                self.state = 107
                self.var_id()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.COMMA:
                    self.state = 109
                    self.match(DecafParser.COMMA)
                    self.state = 110
                    self.var_type()
                    self.state = 111
                    self.var_id()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 120
            self.match(DecafParser.RROUND)
            self.state = 121
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = DecafParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.BOOLEAN, DecafParser.INT]:
                self.state = 123
                self.var_type()
                pass
            elif token in [DecafParser.VOID]:
                self.state = 124
                self.match(DecafParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(DecafParser.VardeclrContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(DecafParser.LCURLY)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.BOOLEAN or _la==DecafParser.INT:
                self.state = 128
                self.vardeclr()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.IF) | (1 << DecafParser.FOR) | (1 << DecafParser.RETURN) | (1 << DecafParser.BREAK) | (1 << DecafParser.CALLOUT) | (1 << DecafParser.ID))) != 0):
                self.state = 134
                self.statement()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def assign_op(self):
            return self.getTypedRuleContext(DecafParser.Assign_opContext,0)


        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def IF(self):
            return self.getToken(DecafParser.IF, 0)

        def LROUND(self):
            return self.getToken(DecafParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(DecafParser.RROUND, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(DecafParser.ELSE, 0)

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_idContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_idContext,i)


        def EQUAL_OP(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.EQUAL_OP)
            else:
                return self.getToken(DecafParser.EQUAL_OP, i)

        def RETURN(self):
            return self.getToken(DecafParser.RETURN, 0)

        def FOR(self):
            return self.getToken(DecafParser.FOR, 0)

        def COMMA(self):
            return self.getToken(DecafParser.COMMA, 0)

        def int_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Int_literalContext)
            else:
                return self.getTypedRuleContext(DecafParser.Int_literalContext,i)


        def BREAK(self):
            return self.getToken(DecafParser.BREAK, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DecafParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.location()
                self.state = 143
                self.assign_op()
                self.state = 144
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.location()
                self.state = 147
                self.assign_op()
                self.state = 148
                self.expr(0)
                self.state = 149
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.method_call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(DecafParser.IF)
                self.state = 153
                self.match(DecafParser.LROUND)
                self.state = 154
                self.expr(0)
                self.state = 155
                self.match(DecafParser.RROUND)
                self.state = 156
                self.block()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DecafParser.ELSE:
                    self.state = 157
                    self.match(DecafParser.ELSE)
                    self.state = 158
                    self.block()


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 161
                self.var_id()
                self.state = 162
                self.match(DecafParser.EQUAL_OP)
                self.state = 163
                self.expr(0)
                self.state = 164
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 166
                self.match(DecafParser.RETURN)
                self.state = 167
                self.expr(0)
                self.state = 168
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.match(DecafParser.FOR)
                self.state = 171
                self.var_id()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DecafParser.EQUAL_OP:
                    self.state = 172
                    self.match(DecafParser.EQUAL_OP)
                    self.state = 173
                    self.int_literal()


                self.state = 176
                self.match(DecafParser.COMMA)
                self.state = 183
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DecafParser.ID]:
                    self.state = 177
                    self.var_id()
                    self.state = 180
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==DecafParser.EQUAL_OP:
                        self.state = 178
                        self.match(DecafParser.EQUAL_OP)
                        self.state = 179
                        self.int_literal()


                    pass
                elif token in [DecafParser.DECIMAL_LITERAL, DecafParser.HEX_LITERAL]:
                    self.state = 182
                    self.int_literal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 185
                self.block()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 187
                self.match(DecafParser.BREAK)
                self.state = 188
                self.match(DecafParser.SEMICOLON)
                pass

